# cpp-pizh-23-2-1-Chekalin

./: .gitignore  CodeRules.md  README.md
lab1/: .gitignore  CMakeLists.txt  README.md  someText.txt
lab1/src/: main.cpp  word_count.cpp  word_count.h
lab2/: README.md  launch_main.bat  vscode_run_config.yml
lab2/lib/: number.cpp  number.h
lab3/: CMakeLists.txt  README.md
lab3/input/: main_input.tsv
lab3/lib/: BmpWriter.cpp  BmpWriter.h  CMakeLists.txt  Sandpile.cpp  Sandpile.h
lab3/tests/: CMakeLists.txt  tests.cpp
lab4/: README.md  launch_main.bat  launch_tests.bat
lab4/lib/: ArgParser.cpp  ArgParser.h
lab4/tests/: argparser_test.cpp
lab5/: .gitignore  README.md  launch_main.bat
lab5/example/: config.omfl
lab5/lib/: parser.cpp  parser.h
lab5/tests/: test_format.cpp  test_parser.cpp
lab6/: README.md
lab6/lib/: CMakeLists.txt  MP3Parser.cpp  MP3Parser.h
lab6/tests/: test_parser.cpp
lab7/: .gitignore  CMakeLists.txt  README.md  launch_main.bat  launch_tests.bat
lab7/lib/: BST_containers.cpp  BST_containers.h
lab7/tests/: CMakeLists.txt  test_bst_containers.cpp
lab8/: CMakeLists.txt  README.md  launch_main.bat  launch_tests.bat
lab8/lib/: CMakeLists.txt  lazy_adapters.cpp  lazy_adapters.h
lab8/tests/: CMakeLists.txt  test_adapters.cpp
lab_1_max/: README.md  windows_build_test.bat
lab_1_max/src/: main.cpp  word_count.cpp  (+1 more)
lab_1_min/: .gitignore  CMakeLists.txt  LICENSE  README.md  demo.bat  windows_demo.bat
lab_1_min/lib/: App.cpp  User.cpp  User.h
lab_1_min/src/: App.h  main.cpp
lab_2_max/: launch_tests.bat
(+2 files in other folders)
